--- a/chat-app/src/app/components/live-chat/live-chat.component.scss
+++ b/chat-app/src/app/components/live-chat/live-chat.component.scss
@@ -178,3 +178,12 @@ main {
     padding: 10px 30px;
   }
 }
+
+.leave-chat-btn {
+  background-color: rgb(250, 91, 91);
+  border: 1px solid rgb(250, 91, 91);
+  padding: 10px 25px;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+}
